fdo#71302 writerfilter: remove "Strong" -> "Strong Emphasis" style rename

Such renames only make sense if the exporter does the opposite of them,
but in this case the stiName array in the exporter explicitly looks for
the "Strong" character styles. So at the end it's better to not rename
it at all.

Change-Id: I69b699c76d287b1fe3b81ea3fe66b77992c6e2f1